@@ -22,7 +22,7 @@ Net::SSLeay::EVP_CIPHER_CTX class in L<SPVM> represents L<EVP_CIPHER_CTX|https:/
 
 C<method DESTROY : void ();>
 
-Calls native L<BIO_free|https://docs.openssl.org/1.0.2/man3/BIO_free> function given the pointer value of the instance if C<no_free> flag of the instance is not a true value.
+Calls native L<EVP_CIPHER_CTX_free|https://docs.openssl.org/3.1/man3/EVP_EncryptInit/> function given the pointer value of the instance if C<no_free> flag of the instance is not a true value.
 
 =head1 See Also
 
